--- a/Views/Departamento/registrardept.cshtml
+++ b/Views/Departamento/registrardept.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 <div class="row" style="margin-top:30px">
     <div class="col-sm-12 text-center">
         <!-- Agregué la clase text-center -->
@@ -16,8 +18,8 @@
             <div class="panel-body">
                 <form action="@Url.Action("registrardept","Departamento")" method="post">
                     <div class="form-group">
-                        <label>Departamento</label>
-                        <input type="text" class="form-control" name="DECRIPCION_DEPARTAMENTO" required /><br />
+                        <label style="font-weight: bold; float: left;"> Departamento</label>
+                        <input type="text" class="form-control" name="DECRIPCION_DEPARTAMENTO" required style="height: 40px; font-size: 16px; background-color: #FFFFCC;" /><br />
                         @Html.ValidationMessageFor(model => model.DECRIPCION_DEPARTAMENTO, "", new { @class = "text-danger" })
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </div>
@@ -29,8 +31,13 @@
                         </div>
                     }
 
-                    <button type="submit" class="btn btn-primary">Registrar</button>
-                    <a class="btn btn-warning" href="@Url.Action("Departamento","Departamento")">Volver</a>
+                    <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                        <i class="fas fa-check" aria-hidden="true"></i>
+                    </button>
+                    <a class="btn btn-warning ml-2" href="@Url.Action("Departamento","Departamento")" style="font-size: 20px; color: #FFFFFF;">
+                        <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                    </a>
+
 
                 </form>
 
