--- a/Views/Empleado/Eliminaremple.cshtml
+++ b/Views/Empleado/Eliminaremple.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="panel-body">
                 <div class="alert alert-danger">
-                    ¿Desea eliminar el empleado @Html.DisplayTextFor(m => m.PRIMER_NOMBRE) @Html.DisplayTextFor(m => m.SEGUNDO_NOMBRE) @Html.DisplayTextFor(m => m.PRIMER_APELLIDO) @Html.DisplayTextFor(m => m.SEGUNDO_APELLIDO)?
+                    ¿Desea eliminar el empleado @Html.DisplayTextFor(m => m.PRIMER_NOMBRE)?
                 </div>
 
                 <form action="@Url.Action("Eliminaremple","Empleado")" method="post">
