--- a/Views/Empleado/empleado.cshtml
+++ b/Views/Empleado/empleado.cshtml
@@ -11,28 +11,18 @@
     <meta charset="UTF-8">
     <title>Lista de Empleados</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <div class="row" style="margin-top:30px">
         <div class="col-sm-12">
-
-            <div class="panel panel-warning" style="font-size: 16px;">
-                <div class="panel-heading">
-                    <h4>Lista de Empleados</h4>
-
+            <div class="card">
+                <div class="card-header bg-yellow">
+                    <h4>Lista de empleados</h4>
                 </div>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <form asp-controller="Empresa" asp-action="empresa">
-                    <p>
-                        <input type="text" name="buscar" class="form-text" />
-                        <input type="submit" value="Buscar" class="btn btn-sm btn-dark" />
-                    </p>
-                </form>
 
                 <div>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -46,9 +36,10 @@
                     <input type="button" value="ROL" class="btn btn-sm btn-dark" onclick="location.href='@Url.Action("Rol", "Rol")'" />
 
                 </div>
-
-                <div class="panel-body">
-                    <a class="btn btn-success" href="@Url.Action("Registraremple", "Empleado")">Crear Nuevo</a>
+                <div class="card-body">
+                    <a class="btn btn-success" style="font-size: 20px; padding: 6px 16px;" href="@Url.Action("Registraremple", "Empleado")">
+                        <i class="fas fa-plus-circle"></i>
+                    </a>
                     <hr />
                     <div class="table-responsive">
                         <table class="table table-striped">
@@ -85,18 +76,18 @@
                                         <td>@item.ESTADO_EMPLEADO.DESCRIPCION_ESTADO_EMPLEADO</td>
                                         <td>@item.NUMERO_DE_HERRAMIENTAS</td>
                                         <td>@item.FECHA_REGISTRO</td>
-                                        <td>
-                                            <a class="btn btn-primary btn-sm" href="@Url.Action("Editaremple","Empleado", new { Idempleado = item.ID_EMPLEADO })">
-                                                <span class="glyphicon glyphicon-pencil" style="font-size: 14px !important;"></span>
-                                            </a>
-                                            <a class="btn btn-danger btn-sm" href="@Url.Action("Eliminaremple","Empleado", new { Idempleado= item.ID_EMPLEADO })">
-                                                <span class="glyphicon glyphicon-trash" style="font-size: 14px !important;"></span>
-                                            </a>
+                                        <td class="text-center">
+                                            <a class="btn btn-primary btn-sm" href="@Url.Action("Editaremple","Empleado", new { Idempleado = item.ID_EMPLEADO}) ">
+                                                <span class="fas fa-edit font-size: 15px; padding: 4px 10px;"></span>
+                                              </a>
+                                            <a class="btn btn-danger btn-sm"  href="@Url.Action("Eliminaremple","Empleado", new { Idempleado= item.ID_EMPLEADO })">
+                                                <span class="fas fa-trash-alt font-size: 15px; padding: 4px 10px;"></span>
+                                              </a>
                                         </td>
 
                                     </tr>
 
-                                 }
+                                }
 
                             </tbody>
                         </table>
@@ -109,6 +100,13 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <style>
+        .bg-yellow {
+            background-color: #F7DC6F; /* Amarillo claro */
+        }
+    </style>
+
 </body>
 </html>
