--- a/Views/Marca/Editarmarca.cshtml
+++ b/Views/Marca/Editarmarca.cshtml
@@ -16,7 +16,7 @@
             <div class="panel-body">
                 <form action="@Url.Action("Editarmarca","Marca")" method="post">
                     <div class="form-group">
-                        <label>Marca</label>
+                        <label style="font-weight: bold;">Marca</label><br />
 
                         <input type="hidden" class="form-control" name="ID_MARCA" value="@Html.DisplayTextFor(m=>m.ID_MARCA)" />
 
