--- a/Views/Rol/registrarrol.cshtml
+++ b/Views/Rol/registrarrol.cshtml
@@ -17,7 +17,7 @@
                 <div class="panel-body">
                     <form action="@Url.Action("registrarrol","Rol")" method="post">
                         <div class="form-group">
-                            <label>Rol</label>
+                            <label style="font-weight: bold; font-size: 1.2em;"> Rol</label>
                             <input type="text" class="form-control" name="DECRIPCION_ROL" /><br />
                         </div>
 
