--- a/Views/Acceso/login.cshtml
+++ b/Views/Acceso/login.cshtml
@@ -35,14 +35,14 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" name="USUARIO" class="form-control" value="" placeholder="usuario">
+                            <input type="text" name="USUARIO" class="form-control" value="" placeholder="usuario" required>
 
                         </div>
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="password" name="CLAVE" class="form-control" value="" placeholder="contraseña">
+                            <input type="password" name="CLAVE" class="form-control"  placeholder="contraseña" required>
                         </div>
 
                         <div class="form-group">
