--- a/Views/Departamento/Departamento.cshtml
+++ b/Views/Departamento/Departamento.cshtml
@@ -11,96 +11,112 @@
     <meta charset="UTF-8">
     <title>Lista de departamentos</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    @section styles{
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
+
+        <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css">
+    }
+
 </head>
 <body>
-    <div class="container">
-        <div class="row" style="margin-top:30px">
-            <div class="col-sm-12">
-
-                <div class="panel panel-warning" style="font-size: 16px;">
-                    <div class="panel-heading">
-                        <h4>Lista de Departamentos</h4>
-
-                    </div>
-                    <div class="panel-body">
-                        <a class="btn btn-success" href="@Url.Action("registrardept","Departamento")">Crear Nuevo</a>
-                        <hr />
-
-                        <!-- Formulario de búsqueda -->
-                        <form id="formBuscar" class="form-inline">
-                            <div class="form-group">
-                                <label for="txtBuscar">Buscar por Nombre:</label>
-                                <input type="text" class="form-control" id="txtBuscar" placeholder="Nombre del Departamento"><br />
-                            </div>
-                        </form>
-                        <br />
-                        <div class="table-responsive">
-                            <table id="tablaDepartamentos" class="table table-striped">
-                                <thead>
+    <div class="row" style="margin-top:30px">
+        <div class="col-sm-12">
+            <div class="card">
+                <div class="card-header bg-yellow">
+                    <h4>Lista de departamentos</h4>
+                </div>
+                <div class="card-body">
+                    <a class="btn btn-success" style="font-size: 20px; padding: 6px 16px;" href="@Url.Action("registrardept","Departamento")">
+                        <i class="fas fa-plus-circle"></i>
+                    </a>
+                    <hr />
+                    <div class="table-responsive">
+                        <table id="tabled" class="table table-striped table-bordered table-condensed table-hover dt-responsive" style="width:100%">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Departamento</th>
+                                    <th>Fecha registro</th>
+                                    <th style="width:150px"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (CONTROL_HERRAMIENTA_SUNCORP.Models.Departamento item in Model)
+                                {
                                     <tr>
-                                        <th>ID</th>
-                                        <th>Departamento</th>
-                                        <th>Fecha registro</th>
-                                      
+                                        <td>@item.ID_DEPARTAMENTO</td>
+                                        <td>@item.DECRIPCION_DEPARTAMENTO</td>
+                                        <td>@item.FECHA_REGISTRO</td>
+                                        <td class="text-center">
+                                            <a class="btn btn-primary btn-sm" style="font-size: 15px; padding: 4px 10px; " href="@Url.Action("Editardept", "Departamento", new { Iddpt = item.ID_DEPARTAMENTO})">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
+                                            <a class="btn btn-danger btn-sm" style="font-size: 15px; padding: 4px 10px;" href="@Url.Action("Eliminardept", "Departamento", new { Iddpt= item.ID_DEPARTAMENTO})">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>
+                                        </td>
+
                                     </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
-                                        <tr>
-                                            <td>@item.ID_DEPARTAMENTO</td>
-                                            <td>@item.DECRIPCION_DEPARTAMENTO</td>
-                                            <td>@item.FECHA_REGISTRO</td>
-                                            <td>
-                                                <a class="btn btn-primary btn-sm" href="@Url.Action("Editardept", "Departamento", new { iddpt = item.ID_DEPARTAMENTO })">
-                                                    <span class="glyphicon glyphicon-pencil"></span>
-                                                </a>
-                                                <a class="btn btn-danger btn-sm" href="@Url.Action("Eliminardept", "Departamento", new { iddpt = item.ID_DEPARTAMENTO })">
-                                                    <span class="glyphicon glyphicon-trash"></span>
-                                                </a>
-                                            </td>
-                                        </tr>
-                                     }
-                                </tbody>
-                            </table>
-                        </div>
+                                }
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-
             </div>
+
         </div>
     </div>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     <!-- Bootstrap JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-    <!-- Script para búsqueda automática -->
-    <script>
-        $(document).ready(function () {
-            $('#txtBuscar').on('input', function () {
-                var query = $(this).val().trim();
+    <style>
+        .bg-yellow {
+            background-color: #F7DC6F; /* Amarillo claro */
+        }
+    </style>
 
-                $.ajax({
-                    url: '@Url.Action("Buscar", "Departamento")',
-                    type: 'POST',
-                    dataType: 'html',
-                    data: { nombre: query },
-                    success: function (response) {
-                        $('#tablaDepartamentos tbody').html(response);
-                    },
-                    error: function (xhr, status, error) {
-                        console.error(error);
+    @section Scripts{
+        <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/plug-ins/1.13.7/i18n/es-MX.json"></script>
+
+        <script>
+
+            new DataTable('#tabled', {
+
+                order: [[0, 'desc']],
+                responsive: true,
+                rowReorder: true,
+                autoWidth: false,
+                language: {
+                    "decimal": ".",
+                    "emptyTable": "No hay datos disponibles en la tabla",
+                    "zeroRecords": "No se encontraron coincidencias",
+                    "info": "Mostrando _START_ a _END_ de _TOTAL_ entradas",
+                    "infoFiltered": "(Filtrado de _MAX_ total de entradas)",
+                    "lengthMenu": "Mostrar _MENU_ entradas",
+                    "search": "Buscar:",
+                    "infoEmpty": "No hay datos para mostrar",
+                    "paginate": {
+                        "first": "Primero",
+                        "last": "Último",
+                        "next": ">",
+                        "previous": "<"
                     }
-                });
+                }
+
             });
-        });
-    </script>
+        </script>
+
+    }
 </body>
 </html>
