--- a/Views/Departamento/Editardept.cshtml
+++ b/Views/Departamento/Editardept.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 <div class="row" style="margin-top:30px">
     <div class="col-sm-12 text-center">
         <!-- Agregué la clase text-center -->
@@ -16,7 +18,7 @@
             <div class="panel-body">
                 <form action="@Url.Action("Editardept","Departamento")" method="post">
                     <div class="form-group">
-                        <label>Departamento</label>
+                        <label style="font-weight: bold; font-size: 1.2em;"> Departamento</label>
 
                         <style>
                             .center-input {
@@ -31,27 +33,29 @@
 
                         <div class="form-container">
                             <div class="center-input">
-                                <input type="hidden" class="form-control" name="ID_DEPARTAMENTO" value="@Html.DisplayTextFor(m=>m.ID_DEPARTAMENTO)" /><br />
+                                <input type="hidden" class="form-control" name="ID_DEPARTAMENTO" value="@Html.DisplayTextFor(m=>m.ID_DEPARTAMENTO)" />
 
-                                <input type="text" class="form-control" name="DECRIPCION_DEPARTAMENTO" value="@Html.DisplayTextFor(m=>m.DECRIPCION_DEPARTAMENTO)" required /><br />
+                                <input type="text" class="form-control" name="DECRIPCION_DEPARTAMENTO" style="height: 40px; font-size: 16px; background-color: #FFFFCC;" value="@Html.DisplayTextFor(m=>m.DECRIPCION_DEPARTAMENTO)" required /><br />
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             </div>
-                            </div>
                         </div>
+                    </div>
 
-                            @if (ViewData["MENSAJEDEPT"] != null)
-                            {
-                                <div class="alert alert-danger" role="alert">
-                                    @ViewData["MENSAJEDEPT"]
-                                </div>
-                            }
+                    @if (ViewData["MENSAJEDEPT"] != null)
+                    {
+                        <div class="alert alert-danger" role="alert">
+                            @ViewData["MENSAJEDEPT"]
+                        </div>
+                    }
 
-                            <button type="submit" class="btn btn-primary">Actualizar</button>
-                            <a class="btn btn-warning" href="@Url.Action("Departamento","Departamento")">Volver</a>
+                    <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
+                        <i class="fas fa-sync-alt" aria-hidden="true"></i>
+                    </button>
+                    <a class="btn btn-warning ml-4" href="@Url.Action("Departamento","Departamento")" style="font-size: 20px; color: #FFFFFF;">
+                        <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                    </a>
 
-
-
-</form>
+                </form>
 
 
             </div>
