--- a/Views/Descargas/Editardescargas.cshtml
+++ b/Views/Descargas/Editardescargas.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 <div class="row" style="margin-top:25px">
     <div class="col-sm-12 text-center">
         <!-- Agregué la clase text-center -->
@@ -19,13 +21,13 @@
                     <input type="hidden" class="form-control" name="ID_DESECHOS" value="@Html.DisplayTextFor(m=>m.ID_DESECHOS)" />
 
                     <div class="form-container">
-                         <div class="center-input">
-                             <div class="form-group">
-                            <label for="ID_USUARIO_BD">Usuario</label>
-                            @Html.DropDownListFor(model => model.ID_USUARIO_BD, (SelectList)ViewBag.tUsuario, new { @class = "form-control" })
+                        <div class="center-input">
+                            <div class="form-group">
+                                <label for="ID_USUARIO_BD">Usuario</label>
+                                @Html.DropDownListFor(model => model.ID_USUARIO_BD, (SelectList)ViewBag.tUsuario, new { @class = "form-control" })
+                            </div>
                         </div>
                     </div>
-                      </div>
 
                     <style>
                         .center-input {
@@ -41,7 +43,7 @@
                     <div class="center-input">
                         <div class="form-group">
                             <label>Fecha de descarga</label>
-                            <input type="date" class="form-control" name="FECHA_DESECHO" required value="@Model.FECHA_DESECHO.ToString("yyyy-MM-dd")" /><br />
+                            <input type="date" class="form-control" name="FECHA_DESECHO" style="height: 40px; font-size: 16px; background-color: #FFFFCC;" required value="@Model.FECHA_DESECHO.ToString("yyyy-MM-dd")" /><br />
                         </div>
                     </div>
 
@@ -52,11 +54,10 @@
                         }
 
 
-                            .form-group label {
-                                display: block; /* Asegura que el label ocupe una línea completa */
-                                margin-bottom: 10px; /* Espacio entre el label y el DropDownList */
-                            }
-
+                        .form-group label {
+                            display: block; /* Asegura que el label ocupe una línea completa */
+                            margin-bottom: 10px; /* Espacio entre el label y el DropDownList */
+                        }
                     </style>
 
                     <div class="form-container">
@@ -71,7 +72,7 @@
                     <div class="center-input">
                         <div class="form-group">
                             <label>Comentario</label>
-                            <input type="text" class="form-control" name="Comentario" value="@Html.DisplayTextFor(m=>m.COMENTARIO)" /><br />
+                            <input type="text" class="form-control" name="Comentario" style="height: 40px; font-size: 16px; background-color: #FFFFCC;" value="@Html.DisplayTextFor(m=>m.COMENTARIO)" /><br />
                         </div>
                     </div>
                     <br />
@@ -89,9 +90,12 @@
                         <input type="file" class="form-control" id="FOTO" name="upload" value="@Html.DisplayTextFor(m=>m.FOTO)" /><br />
                     </div>
 
-
-                    <button type="submit" class="btn btn-primary">Registrar</button>
-                    <a class="btn btn-warning" href="@Url.Action("FACTURA","Factura")">Volver</a>
+                    <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
+                        <i class="fas fa-sync-alt" aria-hidden="true"></i>
+                    </button>
+                    <a class="btn btn-warning ml-4" href="@Url.Action("descargas","Descargas")" style="font-size: 20px; color: #FFFFFF;">
+                        <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                    </a>
 
                 </form>
             </div>
