--- a/Views/Empleado/Editaremple.cshtml
+++ b/Views/Empleado/Editaremple.cshtml
@@ -5,80 +5,95 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>ACTUALIZAR EMPLEADO</h4>
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-4 justify">Registro de empleados</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+
+        <form action="@Url.Action("Editaremple","Empleado")" method="post">
+
+            <input type="hidden" class="form-control" name="ID_EMPLEADO" /><br />
+
+            <div class="form-row">
+             <div class="form-group col-md-12">
+                <input type="text" class="form-control" name="DNI" required style="height: 40px; font-size: 16px; background-color: #FFFFCC;" value="@Html.DisplayTextFor(m=>m.DNI)" /><br />
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Editaremple","Empleado")" method="post">
+                </div>
 
-                    <input type="hidden" class="form-control" name="ID_EMPLEADO" /><br />
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label style="font-weight: bold;">Primer nombre</label>
+                    <input type="text" class="form-control" name="PRIMER_NOMBRE" required style="height: 40px; font-size: 16px; background-color: #FFFFCC;" value="@Html.DisplayTextFor(m=>m.PRIMER_NOMBRE)" /><br />
+                </div>
+                </div>
 
-                    <div class="form-group">
-                        <label>DNI</label>
-                        <input type="text" class="form-control" name="DNI" required value="@Html.DisplayTextFor(m=>m.DNI)" /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Primer nombre</label>
-                        <input type="text" class="form-control" name="PRIMER_NOMBRE" required value="@Html.DisplayTextFor(m=>m.PRIMER_NOMBRE)" /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Segundo nombre</label>
-                        <input type="text" class="form-control" name="SEGUNDO_NOMBRE" value="@Html.DisplayTextFor(m=>m.SEGUNDO_NOMBRE)" /><br />
-                    </div>
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label style="font-weight: bold;">Segundo nombre</label>
+                    <input type="text" class="form-control" name="SEGUNDO_NOMBRE" style="height: 40px; font-size: 16px; background-color: #FFFFCC;" value="@Html.DisplayTextFor(m=>m.SEGUNDO_NOMBRE)" /><br />
+                </div>
+                </div>
 
-                    <div class="form-group">
-                        <label>Primer apellido</label>
-                        <input type="text" class="form-control" name="PRIMER_APELLIDO" required value="@Html.DisplayTextFor(m=>m.PRIMER_APELLIDO)" /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Segundo apellido</label>
-                        <input type="text" class="form-control" name="SEGUNDO_APELLIDO" value="@Html.DisplayTextFor(m=>m.SEGUNDO_APELLIDO)" /><br />
-                    </div>
+                <div class="form-group">
+                    <label style="font-weight: bold;">Primer apellido</label>
+                    <input type="text" class="form-control" name="PRIMER_APELLIDO" style="height: 40px; font-size: 16px; background-color: #FFFFCC;" required value="@Html.DisplayTextFor(m=>m.PRIMER_APELLIDO)" /><br />
+                </div>
+                <div class="form-group">
+                    <label style="font-weight: bold;">Segundo apellido</label>
+                    <input type="text" class="form-control" name="SEGUNDO_APELLIDO" style="height: 40px; font-size: 16px; background-color: #FFFFCC;" value="@Html.DisplayTextFor(m=>m.SEGUNDO_APELLIDO)" /><br />
+                </div>
 
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Genero</label>
-                        @Html.DropDownListFor(model => model.ID_GENERO, (SelectList)ViewBag.Genero, new { @class = "form-control" })<br />
-                    </div>
+                <div class="form-group">
+                    <label style="font-weight: bold;" for="ID_GENERO">Genero</label>
+                    @Html.DropDownListFor(model => model.ID_GENERO, (SelectList)ViewBag.Genero, new { @class = "form-control" })<br />
+                </div>
 
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Sucursal</label>
-                        @Html.DropDownListFor(model => model.ID_SUCURSAL, (SelectList)ViewBag.Sucursal, new { @class = "form-control" })<br />
-                    </div>
+                <div class="form-group">
+                    <label style="font-weight: bold;" for="ID_SUCURSAL">Sucursal</label>
+                    @Html.DropDownListFor(model => model.ID_SUCURSAL, (SelectList)ViewBag.Sucursal, new { @class = "form-control" })<br />
+                </div>
 
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Departamento</label>
-                        @Html.DropDownListFor(model => model.ID_DEPARTAMENTO, (SelectList)ViewBag.Departamento, new { @class = "form-control" })<br />
-                    </div>
+                <div class="form-group">
+                    <label style="font-weight: bold;" for="ID_DEPARTAMENTO">Departamento</label>
+                    @Html.DropDownListFor(model => model.ID_DEPARTAMENTO, (SelectList)ViewBag.Departamento, new { @class = "form-control" })<br />
+                </div>
 
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Rol</label>
-                        @Html.DropDownListFor(model => model.ID_ROL, (SelectList)ViewBag.Rol, new { @class = "form-control" })<br />
-                    </div>
+                <div class="form-group">
+                    <label style="font-weight: bold;" for="ID_ROL">Rol</label>
+                    @Html.DropDownListFor(model => model.ID_ROL, (SelectList)ViewBag.Rol, new { @class = "form-control" })<br />
+                </div>
 
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Estado empleado</label>
-                        @Html.DropDownListFor(model => model.ID_ESTADO_EMPLEADO, (SelectList)ViewBag.Estado, new { @class = "form-control" })<br />
-                    </div>
+                <div class="form-group">
+                    <label style="font-weight: bold;" for="ID_ESTADO_EMPLEADO">Estado empleado</label>
+                    @Html.DropDownListFor(model => model.ID_ESTADO_EMPLEADO, (SelectList)ViewBag.Estado, new { @class = "form-control" })<br />
+                </div>
 
-                    @if (ViewData["MENSAJEEMPLEADO"] != null)
-                    {
-                        <div class="alert alert-danger" role="alert">
-                            @ViewData["MENSAJEEMLPLEADO"]
-                        </div>
-                    }
+                <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
+                    <i class="fas fa-sync-alt" aria-hidden="true"></i>
+                </button>
+                <a class="btn btn-warning ml-4" href="@Url.Action("empleado","Empleado")" style="font-size: 20px; color: #FFFFFF;">
+                    <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                </a>
 
-                    <button type="submit" class="btn btn-primary">Actualizar</button>
-                    <a class="btn btn-warning" href="@Url.Action("empleado","Empleado")">Volver</a>
-
-                </form>
-
-            </div>
+</form>
         </div>
-    </div>
-</div>
+  </body>
+</html>
 
