--- a/Views/Empleado/Registraremple.cshtml
+++ b/Views/Empleado/Registraremple.cshtml
@@ -5,69 +5,152 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>NUEVO EMPLEADO</h4><br />
+
+
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-4 justify">Registro de empleados</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12" >
+
+        <form action="@Url.Action("Registraremple","Empleado")" method="post">
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>DNI</label>
+                    <input type="text" class="form-control" name="DNI" required" placeholder="DNI"><br />
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Registraremple","Empleado")" method="post">
-                    <div class="form-group">
-                        <label>DNI</label>
-                        <input type="text" class="form-control" name="DNI" required /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Primer nombre</label>
-                        <input type="text" class="form-control" name="PRIMER_NOMBRE" required /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Segundo nombre</label>
-                        <input type="text" class="form-control" name="SEGUNDO_NOMBRE" /><br />
-                    </div>
 
-                    <div class="form-group">
-                        <label>Primer apellido</label>
-                        <input type="text" class="form-control" name="PRIMER_APELLIDO" required /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Segundo apellido</label>
-                        <input type="text" class="form-control" name="SEGUNDO_APELLIDO" /><br />
-                    </div>
+            <div class="form-row">
+                <div class="form-group col-md-5">
+                    <label>Primer nombre</label>
+                    <input type="text" class="form-control" name="PRIMER_NOMBRE" required placeholder="Primer nombre"><br />
+                </div>
+                <div class="form-group col-md-5">
+                    <label>Segundo nombre</label>
+                    <input type="text" class="form-control" name="SEGUNDO_NOMBRE" placeholder="Segundo nombre"><br />
+                </div>
 
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Genero</label>
-                        @Html.DropDownListFor(model => model.ID_GENERO, (SelectList)ViewBag.Genero, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Sucursal</label>
-                        @Html.DropDownListFor(model => model.ID_SUCURSAL, (SelectList)ViewBag.Sucursal, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Departamento</label>
-                        @Html.DropDownListFor(model => model.ID_DEPARTAMENTO, (SelectList)ViewBag.Departamento, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Rol</label>
-                        @Html.DropDownListFor(model => model.ID_ROL, (SelectList)ViewBag.Rol, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Estado empleado</label>
-                        @Html.DropDownListFor(model => model.ID_ESTADO_EMPLEADO, (SelectList)ViewBag.Estado, new { @class = "form-control" })<br />
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Registrar</button>
-                    <a class="btn btn-warning" href="@Url.Action("empleado","Empleado")">Volver</a>
-
-                </form>
             </div>
-        </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-5">
+                    <label>Primer apellido</label>
+                    <input type="text" class="form-control" name="PRIMER_APELLIDO" required placeholder="Primer nombre"><br />
+                </div>
+                <div class="form-group col-md-5">
+                    <label>Segundo apellido</label>
+                    <input type="text" class="form-control" name="SEGUNDO_APELLIDO" placeholder="Segundo nombre"><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_GENERO">Genero</label><br />
+                    <select id="ID_GENERO" class="form-control" name="ID_GENERO" required>
+                        <option value="">Seleccione un genero</option>
+                        @foreach (var itemg in ViewBag.Genero)
+                        {
+                            <option value="@itemg.Value">@itemg.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_SUCURSAL"> Sucursal</label><br />
+                    <select class="form-control" name="ID_SUCURSAL" id="ID_SUCURSAL_P" required>
+                        <option value="">Seleccione una sucursal</option>
+                        @foreach (var item in ViewBag.Sucursal)
+                        {
+                            <option value="@item.Value">@item.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_DEPARTAMENTO">Departamento</label><br />
+                    <select class="form-control" name="ID_DEPARTAMENTO" id="ID_DEPARTAMENTO_D" required>
+                        <option value="">Seleccione un departamento</option>
+                        @foreach (var itemd in ViewBag.Departamento)
+                        {
+                            <option value="@itemd.Value">@itemd.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_ROL">Rol</label><br />
+                    <select id="ID_ROL" class="form-control" name="ID_ROL" required>
+                        <option value="">Seleccione un rol</option>
+                        @foreach (var itemr in ViewBag.Rol)
+                        {
+                            <option value="@itemr.Value">@itemr.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_ESTADO_EMPLEADO">Estado</label><br />
+                    <select id="ID_ESTADO_EMPLEADO" class="form-control" name="ID_ESTADO_EMPLEADO" required>
+                        <option value="">Seleccione un estado</option>
+                        @foreach (var itemeS in ViewBag.Estado)
+                        {
+                            <option value="@itemeS.Value">@itemeS.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+
+
+            <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-check" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-2" href="@Url.Action("empleado","Empleado")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+
+        </form>
     </div>
-</div>
+ 
 
+    @section Scripts{
+
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+        <script type="text/javascript">
+
+            $(document).ready(function () {
+                $('#ID_SUCURSAL_P').select2();
+                $('#ID_DEPARTAMENTO_D').select2();
+            });
+
+        </script>
+    }
+    </body>
+    </html>
