--- a/Views/Empresa/Editar.cshtml
+++ b/Views/Empresa/Editar.cshtml
@@ -5,43 +5,72 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:25px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>ACTUALIZAR EMPRESA</h4>
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-4 justify">Actualizar empresa</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("Editar","Empresa")" method="post">
+
+            <input type="hidden" class="form-control" name="ID_EMPRESA" value="@Html.DisplayTextFor(m=>m.ID_EMPRESA)" /><br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label style="font-weight: bold;">RTN</label>
+                    <input type="text" class="form-control" name="RTN" required value="@Html.DisplayTextFor(m=>m.RTN)" /><br />
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Editar","Empresa")" method="post">
 
-                    <input type="hidden" class="form-control" name="ID_EMPRESA" value="@Html.DisplayTextFor(m=>m.ID_EMPRESA)" /><br />
 
-                    <div class="form-group">
-                        <label>RTN</label>
-                        <input type="text" class="form-control" name="RTN" required value="@Html.DisplayTextFor(m=>m.RTN)" /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Nombre empresa</label>
-                        <input type="text" class="form-control" name="NOMBRE_EMPRESA" required value="@Html.DisplayTextFor(m=>m.NOMBRE_EMPRESA)" /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Correo electronico</label>
-                        <input type="text" class="form-control" name="CORREO_ELECTRONICO" required value="@Html.DisplayTextFor(m=>m.CORREO_ELECTRONICO)" /><br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Corporacion</label>
-                        @Html.DropDownListFor(model => model.ID_CORPORACION, (SelectList)ViewBag.Corporaciones, new { @class = "form-control" })<br />
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Actualizar</button>
-                    <a class="btn btn-warning" href="@Url.Action("empresa","Empresa")">Volver</a>
-
-                </form>
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label style="font-weight: bold;">Nombre empresa</label>
+                    <input type="text" class="form-control" name="NOMBRE_EMPRESA" required value="@Html.DisplayTextFor(m=>m.NOMBRE_EMPRESA)" /><br />
+                </div>
             </div>
-        </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+
+                    <label style="font-weight: bold;">Correo electronico</label>
+                    <input type="text" class="form-control" name="CORREO_ELECTRONICO" required value="@Html.DisplayTextFor(m=>m.CORREO_ELECTRONICO)" /><br />
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <label style="font-weight: bold;" for="ID_CORPORACION">Corporacion</label>
+                @Html.DropDownListFor(model => model.ID_CORPORACION, (SelectList)ViewBag.Corporaciones, new { @class = "form-control" })<br />
+            </div>
+
+            <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-sync-alt" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-4" href="@Url.Action("empresa","Empresa")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+        </form>
     </div>
-</div>
+
+ 
+</body>
+</html >
+
+
 
