--- a/Views/Empresa/Registrar.cshtml
+++ b/Views/Empresa/Registrar.cshtml
@@ -5,42 +5,74 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:35px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>NUEVA EMPRESA</h4><br />
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+</head>
+
+<body>
+
+    <h3 class="text-center mt-4 justify">Registro de empresa</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("Registrar","Empresa")" method="post">
+
+            <div class="form-row">
+                <div class="form-group col-md-5">
+                    <label style="font-weight: bold;">RTN</label>
+                    <input type="text" class="form-control" name="RTN" required /><br />
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Registrar","Empresa")" method="post">
 
-                    <div class="form-group">
-                        <label>RTN</label>
-                        <input type="text" class="form-control" name="RTN" required /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Nombre empresa</label>
-                        <input type="text" class="form-control" name="NOMBRE_EMPRESA" required /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Correo electronico</label>
-                        <input type="text" class="form-control" name="CORREO_ELECTRONICO" required /><br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_CORPORACION">Corporacion</label>
-                        @Html.DropDownListFor(model => model.ID_CORPORACION, (SelectList)ViewBag.Corporaciones, new { @class = "form-control" })<br />
-                       
-                    </div>
-                    <button type="submit" class="btn btn-primary">Registrar</button>
-                    <a class="btn btn-warning" href="@Url.Action("empresa","Empresa")">Volver</a>
-
-                </form>
+            <div class="form-row">
+                <div class="form-group col-md-5">
+                    <label style="font-weight: bold;">Nombre empresa</label>
+                    <input type="text" class="form-control" name="NOMBRE_EMPRESA" required /><br />
+                </div>
             </div>
-        </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-5">
+                    <label style="font-weight: bold;">Correo electronico</label>
+                    <input type="text" class="form-control" name="CORREO_ELECTRONICO" required /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_CORPORACION">Corporacion</label><br />
+                    <select id="ID_CORPORACION" class="form-control" name="ID_CORPORACION" required>
+                        <option value="">Seleccione una corporacion</option>
+                        @foreach (var itemec in ViewBag.Corporaciones)
+                        {
+                            <option value="@itemec.Value">@itemec.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-check" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-2" href="@Url.Action("empresa","Empresa")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+
+
+        </form>
     </div>
-</div>
-
+</body>
+</html>
 
