--- a/Views/Herramienta/Eliminarherramienta.cshtml
+++ b/Views/Herramienta/Eliminarherramienta.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 <div class="row" style="margin-top:30px">
     <div class="col-sm-12 text-center">
         <!-- Agregué la clase text-center -->
@@ -19,10 +21,16 @@
                 </div>
 
                 <form action="@Url.Action("Eliminarherramienta","Herramienta")" method="post">
+
                     <input type="hidden" class="form-control" name="Idherramienta" value="@Html.DisplayTextFor(m => m.ID_HERRAMIENTA)" /><br />
 
-                    <button type="submit" class="btn btn-danger">Eliminar</button>
-                    <a class="btn btn-warning" href="@Url.Action("Herramienta","Herramienta")">Volver</a>
+                    <button type="submit" class="btn btn-danger" style="font-size: 20px; color: #FFFFFF;">
+                        <i class="fas fa-trash-alt" aria-hidden="true"></i> 
+                    </button>
+                    <a class="btn btn-warning" href="@Url.Action("Herramienta","Herramienta")" style="font-size: 20px; color: #FFFFFF;">
+                        <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                    </a>
+
                 </form>
 
             </div>
