--- a/Views/Marca/Marca.cshtml
+++ b/Views/Marca/Marca.cshtml
@@ -11,34 +11,32 @@
     <meta charset="UTF-8">
     <title>Lista de Empresas</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
+    @section styles{
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
+
+        <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css">
+    }
+
 </head>
 <body>
     <div class="row" style="margin-top:30px">
         <div class="col-sm-12">
-
-            <div class="panel panel-warning" style="font-size: 16px;">
-                <div class="panel-heading">
-                    <h4>Lista de Marca</h4>
-
+            <div class="card">
+                <div class="card-header bg-yellow">
+                    <h4>Lista de marcas</h4>
                 </div>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <form asp-controller="Empresa" asp-action="empresa">
-                    <p>
-                        <input type="text" name="buscar" class="form-text" />
-                        <input type="submit" value="Buscar" class="btn btn-sm btn-dark" />
-                    </p>
-                </form>
-
-                <div class="panel-body">
-                    <a class="btn btn-success" href="@Url.Action("registrarmarca", "Marca")">Crear Nuevo</a>
+                <div class="card-body">
+                    <a class="btn btn-success" style="font-size: 20px; padding: 6px 16px;" href="@Url.Action("registrarmarca", "Marca")">
+                    <i class="fas fa-plus-circle"></i>
+                    </a>
                     <hr />
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table id="tablem" class="table table-striped table-bordered table-condensed table-hover dt-responsive" style="width:100%">
                             <thead>
                                 <tr>
                                     <th>ID</th>
@@ -54,30 +52,71 @@
                                         <td>@item.ID_MARCA</td>
                                         <td>@item.DECRIPCION_MARCA</td>
                                         <td>@item.FECHA_REGISTRO</td>
-                                        <td>
-                                            <a class="btn btn-primary btn-sm" href="@Url.Action("Editarmarca","Marca", new { Idmarca = item.ID_MARCA })">
-                                                <span class="glyphicon glyphicon-pencil" style="font-size: 14px !important;"></span>
+                                        <td class="text-center">
+                                            <a class="btn btn-primary btn-sm" style="font-size: 15px; padding: 4px 10px; " href="@Url.Action("Editarmarca","Marca", new { Idmarca = item.ID_MARCA})">
+                                                <i class="fas fa-edit"></i>
                                             </a>
-                                            <a class="btn btn-danger btn-sm" href="@Url.Action("Eliminarmarca","Marca", new { Idmarca = item.ID_MARCA })">
-                                                <span class="glyphicon glyphicon-trash" style="font-size: 14px !important;"></span>
+                                            <a class="btn btn-danger btn-sm" style="font-size: 15px; padding: 4px 10px;" href="@Url.Action("Eliminarmarca","Marca", new { Idmarca = item.ID_MARCA})">
+                                                <i class="fas fa-trash-alt"></i>
                                             </a>
                                         </td>
 
                                     </tr>
-
                                 }
-
                             </tbody>
                         </table>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     <!-- Bootstrap JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <style>
+        .bg-yellow {
+            background-color: #F7DC6F; /* Amarillo claro */
+        }
+    </style>
+
+    @section Scripts{
+        <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/plug-ins/1.13.7/i18n/es-MX.json"></script>
+
+        <script>
+
+            new DataTable('#tablem', {
+
+                order: [[0, 'desc']],
+                responsive: true,
+                rowReorder: true,
+                autoWidth: false,
+                language: {
+                    "decimal": ".",
+                    "emptyTable": "No hay datos disponibles en la tabla",
+                    "zeroRecords": "No se encontraron coincidencias",
+                    "info": "Mostrando _START_ a _END_ de _TOTAL_ entradas",
+                    "infoFiltered": "(Filtrado de _MAX_ total de entradas)",
+                    "lengthMenu": "Mostrar _MENU_ entradas",
+                    "search": "Buscar:",
+                    "infoEmpty": "No hay datos para mostrar",
+                    "paginate": {
+                        "first": "Primero",
+                        "last": "Último",
+                        "next": ">",
+                        "previous": "<"
+                    }
+                }
+
+            });
+        </script>
+    }
 </body>
 </html>
