--- a/Views/Marca/registrarmarca.cshtml
+++ b/Views/Marca/registrarmarca.cshtml
@@ -6,16 +6,17 @@
 }
 
 <div class="row" style="margin-top:30px">
-    <div class="col-sm-12">
-
-        <div class="panel panel-warning">
+    <div class="col-sm-12 text-center">
+        <!-- Agregué la clase text-center -->
+        <div class="panel panel-warning" style="display: inline-block;">
+            <!-- Agregué display: inline-block -->
             <div class="panel-heading">
-                <h4>NUEVA MARCA</h4>
+                <h4>NUEVA MARCA</h4><br />
             </div>
             <div class="panel-body">
                 <form action="@Url.Action("registrarmarca","Marca")" method="post">
                     <div class="form-group">
-                        <label>Marca</label>
+                        <label style="font-weight: bold;">Marca</label>
                         <input type="text" class="form-control" name="DECRIPCION_MARCA" required />
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </div>
