--- a/Views/Serie_herramienta/Registrarserie.cshtml
+++ b/Views/Serie_herramienta/Registrarserie.cshtml
@@ -5,60 +5,141 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>NUEVA SERIE DE HERRAMIENTA</h4><br />
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+</head>
+
+<body>
+
+    <h3 class="text-center mt-4 justify">Registro de series herramientas</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+
+        <form action="@Url.Action("Registrarserie","Serie_herramienta")" method="post">
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_SUCURSAL"> Sucursal</label><br />
+                    <select class="form-control" name="ID_SUCURSAL" id="ID_SUCURSAL_P" required>
+                        <option value="">Seleccione una sucursal</option>
+                        @foreach (var item in ViewBag.Sucursal)
+                        {
+                            <option value="@item.Value">@item.Text</option>
+                        }
+                    </select>
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Registrarserie","Serie_herramienta")" method="post">
+            <br />
 
-                    <div class="form-group">
-                        <label for="ID_SUCURSAL">Sucursal</label>
-                        @Html.DropDownListFor(model => model.ID_SUCURSAL, (SelectList)ViewBag.Sucursal, new { @class = "form-control" })<br />
-                    </div>
-                    <div class="form-group">
-                        <label for="ID_HERRAMIENTA">Herramienta</label>
-                        @Html.DropDownListFor(model => model.ID_HERRAMIENTA, (SelectList)ViewBag.Herramienta, new { @class = "form-control" })<br />
-                    </div>
-                    <div class="form-group">
-                        <label for="UBICACION_FISICA">Ubicación Física</label>
-                        <input type="text" class="form-control" name="UBICACION_FISICA" required /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Número de Serie</label>
-                        <input type="text" class="form-control" name="NUMERO_SERIE" required /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Precio</label>
-                        <input type="text" class="form-control" name="PRECIO" /><br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_FACTURA">Estado herramienta</label>
-                        @Html.DropDownListFor(model => model.ID_ESTADO_HERRAMIENTA, (SelectList)ViewBag.Estado_herramienta, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_FACTURA">Factura</label>
-                        @Html.DropDownListFor(model => model.ID_FACTURA, (SelectList)ViewBag.Factura, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="COMENTARIO">Comentario</label>
-                        <input type="text" class="form-control" name="COMENTARIO" /><br />
-                    </div>
-                    <button type="submit" class="btn btn-primary">Registrar</button>
-                    <a class="btn btn-warning" href="@Url.Action("serie", "Serie_herramienta")">Volver</a>
-
-                </form>
-
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_SUCURSAL">Herramienta</label><br />
+                    <select class="form-control" name="ID_HERRAMIENTA" id="ID_HERRAMIENTA_R" required>
+                        <option value="">Seleccione un modelo de herramienta</option>
+                        @foreach (var items in ViewBag.Herramienta)
+                        {
+                            <option value="@items.Value">@items.Text</option>
+                        }
+                    </select>
+                </div>
             </div>
-        </div>
+            <br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="UBICACION_FISICA">Ubicación Física</label><br />
+                    <input type="text" class="form-control" name="UBICACION_FISICA" required /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Número de Serie</label>
+                    <input type="text" class="form-control" name="NUMERO_SERIE" required /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Precio</label>
+                    <input type="text" class="form-control" name="PRECIO" /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_ESTADO_HERRAMIENTA">Estado herramienta</label><br />
+                    <select id="ID_ESTADO_HERRAMIENTA" class="form-control" name="ID_ESTADO_HERRAMIENTA" required>
+                        <option value="">Seleccione un estado de herramienta</option>
+                        @foreach (var itemeS in ViewBag.Estado_herramienta)
+                        {
+                            <option value="@itemeS.Value">@itemeS.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Factura</label><br />
+                    <select class="form-control" name="ID_FACTURA" id="ID_FACTURA_S" required>
+                        <option value="">Seleccione una factura</option>
+                        @foreach (var iteml in ViewBag.Factura)
+                        {
+                            <option value="@iteml.Value">@iteml.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <br />
+
+            <div class="form-group">
+                <label for="COMENTARIO">Comentario</label>
+                <input type="text" class="form-control" name="COMENTARIO" /><br />
+            </div>
+
+            <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-check" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-2" href="@Url.Action("serie","Serie_herramienta")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+        </form>
     </div>
-</div>
+
+
+    @section Scripts{
+
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+        <script type="text/javascript">
+
+            $(document).ready(function () {
+                $('#ID_SUCURSAL_P').select2();
+                $('#ID_HERRAMIENTA_R').select2();
+                $('#ID_FACTURA_S').select2();
+            });
+
+        </script>
+    }
+
+    </body>
+</html>
+
+
+
 
 
