--- a/Views/Serie_herramienta/serie.cshtml
+++ b/Views/Serie_herramienta/serie.cshtml
@@ -11,94 +11,108 @@
     <meta charset="UTF-8">
     <title>Lista de series de las herramientas</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="~/Content/css/empleado.css" rel="stylesheet" />
 </head>
+
 <body>
     <div class="row" style="margin-top:30px">
         <div class="col-sm-12">
+            <div class="card">
+                <div class="card-header bg-yellow">
+                    <h4>Lista de series de herramientas</h4>
+                </div>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <input type="button" value="HERRAMIENTA" class="btn btn-sm btn-dark" onclick="location.href='@Url.Action("Herramienta", "Herramienta")'" />
+                </div>
 
-            <div class="panel panel-warning" style="font-size: 16px;">
-                <div class="panel-heading">
-                    <h4>Lista de serie de las herramientas</h4>
-                    <div>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <input type="button" value="HERRAMIENTA" class="btn btn-sm btn-dark" onclick="location.href='@Url.Action("Herramienta", "Herramienta")'" />
-                    </div>
-
-                    <div class="panel-body">
-                        <a class="btn btn-success" href="@Url.Action("Registrarserie", "Serie_herramienta")">Crear Nuevo</a>
-                        <hr />
-
-                        <div class="table-responsive">
-                            <table class="table table-striped">
-                                <thead>
+                <div class="card-body">
+                    <a class="btn btn-success" style="font-size: 20px; padding: 6px 16px;" href="@Url.Action("Registrarserie", "Serie_herramienta")">
+                        <i class="fas fa-plus-circle"></i>
+                    </a>
+                    <hr />
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Sucursal</th>
+                                    <th>Modelo</th>
+                                    <th>Ubicacion fisica</th>
+                                    <th>Numero serie</th>
+                                    <th>Precio</th>
+                                    <th>Estado herramienta</th>
+                                    <th>Numero factura</th>
+                                    <th>Comentario</th>
+                                    <th>Cantidad de empleados</th>
+                                    <th>Fecha registro</th>
+                                    <th style="width:150px"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (CONTROL_HERRAMIENTA_SUNCORP.Models.Serie item in Model)
+                                {
                                     <tr>
-                                        <th>Sucursal</th>
-                                        <th>Modelo</th>
-                                        <th>Ubicacion fisica</th>
-                                        <th>Numero serie</th>
-                                        <th>Precio</th>
-                                        <th>Estado herramienta</th>
-                                        <th>Numero factura</th>
-                                        <th>Cantidad de empleados</th>
-                                        <th>Comentario</th>
-                                        <th>Fecha registro</th>
-                                        <th style="width:150px"></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (CONTROL_HERRAMIENTA_SUNCORP.Models.Serie item in Model)
-                                    {
-                                        <tr>
-                                            <td>@item.SUCURSAL.NOMBRE_SUCURSAL</td>
-                                            <td>@item.HERRAMIENTA.MODELO</td>
-                                            <td>@item.UBICACION_FISICA</td>
-                                            <td>@item.NUMERO_SERIE</td>
-                                            <td>@item.PRECIO</td>
-                                            <td>@item.ESTADO_HERRAMIENTA.DECRIPCION_ESTADO_HERRAMIENTA</td>
+                                        <td>@item.SUCURSAL.NOMBRE_SUCURSAL</td>
+                                        <td>@item.HERRAMIENTA.MODELO</td>
+                                        <td>@item.UBICACION_FISICA</td>
+                                        <td>@item.NUMERO_SERIE</td>
+                                        <td>@item.PRECIO</td>
+                                        <td>@item.ESTADO_HERRAMIENTA.DECRIPCION_ESTADO_HERRAMIENTA</td>
+                                        @if (string.IsNullOrEmpty(item.FACTURA.NUMERO_FACTURA))
+                                        {
+                                            <td>No hay factura</td>
+                                        }
+                                        else
+                                        {
                                             <td>@item.FACTURA.NUMERO_FACTURA</td>
-                                            <td>@item.COMENTARIO</td>
-                                            <td>@item.CANTIDAD_DE_EMPLEADOS</td>
-                                            <td>@item.FECHA_REGISTRO</td>
-                                            <td>
-                                                <a class="btn btn-primary btn-sm" href="@Url.Action("Editarserieher","Serie_herramienta", new { Idserie = item.ID_REGISTRO_SERIE_HERRAMIENTA})">
-                                                    <span class="glyphicon glyphicon-pencil" style="font-size: 14px !important;"></span>
-                                                </a>
-                                                <a class="btn btn-danger btn-sm" href="@Url.Action("Eliminarserieher","Serie_herramienta", new { Idserie= item.ID_REGISTRO_SERIE_HERRAMIENTA })">
-                                                    <span class="glyphicon glyphicon-trash" style="font-size: 14px !important;"></span>
-                                                </a>
-                                                <a class="btn btn-usuario btn-sm" href="@Url.Action("Serie_empleado", "Serieemple", new { idseries = item.ID_REGISTRO_SERIE_HERRAMIENTA})">
-                                                    <span class="glyphicon glyphicon-user" style="font-size: 14px !important;"></span>
-                                                </a>
-                                            </td>
+                                        }
+                                        <td>@item.COMENTARIO</td>
+                                        <td>@item.CANTIDAD_DE_EMPLEADOS</td>
+                                        <td>@item.FECHA_REGISTRO</td>
 
-                                        </tr>
+                                        <td class="text-center">
+                                            <a class="btn btn-primary btn-sm" style="font-size: 15px; padding: 4px 10px; " href="@Url.Action("Editarserieher","Serie_herramienta", new { IdSERIE = item.ID_REGISTRO_SERIE_HERRAMIENTA})">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
+                                            <a class="btn btn-danger btn-sm" style="font-size: 15px; padding: 4px 10px;" href="@Url.Action("Eliminarserieher","Serie_herramienta", new { Idserie = item.ID_REGISTRO_SERIE_HERRAMIENTA })">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>
+                                            <a class="btn btn-success btn-sm" style="font-size: 15px; padding: 4px 10px;" href="@Url.Action("Serie_empleado", "Serieemple", new { idseries = item.ID_REGISTRO_SERIE_HERRAMIENTA})">
+                                                <i class="fas fa-user"></i>
+                                            </a>
+                                        </td>
 
-                                    }
+                                    </tr>
 
-                                </tbody>
-                            </table>
-                        </div>
+                                }
+
+                            </tbody>
+                        </table>
                     </div>
                 </div>
+            </div>
         </div>
     </div>
-        </div>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <style>
+        .bg-yellow {
+            background-color: #F7DC6F; /* Amarillo claro */
+        }
+    </style>
 </body>
 </html>
 
