--- a/Views/Tipo/Editartipo.cshtml
+++ b/Views/Tipo/Editartipo.cshtml
@@ -15,24 +15,49 @@
             </div>
             <div class="panel-body">
                 <form action="@Url.Action("Editartipo","Tipo")" method="post">
-                    <div class="form-group">
-                        <label>Tipo herramienta</label>
 
-                        <input type="hidden" class="form-control" name="ID_TIPO_HERRAMIENTA" value="@Html.DisplayTextFor(m=>m.ID_TIPO_HERRAMIENTA)" />
-
-                        <input type="text" class="form-control" name="DECRIPCION_TIPO_HERRAMIENTA" value="@Html.DisplayTextFor(m=>m.DECRIPCION_TIPO_HERRAMIENTA)" required />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    </div>
-
-                    @if (ViewData["MENSAJETIPO"] != null)
-                    {
-                        <div class="alert alert-danger" role="alert">
-                            @ViewData["MENSAJETIPO"]
+                    <div class="center-input">
+                        <div class="form-group">
+                                <label style="font-weight: bold; font-size: 1.2em;">Tipo herramienta</label>
+                                <input type="hidden" class="form-control" name="ID_TIPO_HERRAMIENTA" value="@Html.DisplayTextFor(m=>m.ID_TIPO_HERRAMIENTA)" />
+                                <input type="text" class="form-control" name="DECRIPCION_TIPO_HERRAMIENTA" value="@Html.DisplayTextFor(m=>m.DECRIPCION_TIPO_HERRAMIENTA)" required />
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            </div>
                         </div>
-                    }
 
-                    <button type="submit" class="btn btn-primary">Actualizar</button>
-                    <a class="btn btn-warning" href="@Url.Action("Tipo","Tipo")">Volver</a>
+                            <style>
+                                .center-input {
+                                    text-align: center; /* Centra el contenido en línea */
+                                    margin-top: 20px; /* Espacio superior opcional */
+                                }
+
+                                    .center-input input {
+                                        display: inline-block; /* Permite centrar el input dentro del contenedor */
+                                    }
+                            </style>
+
+                            <style>
+                                .form-container {
+                                    text-align: center; /* Centra el contenido en línea */
+                                    margin: 50px; /* Espacio opcional alrededor del contenedor */
+                                }
+
+
+                                .form-group label {
+                                    display: block; /* Asegura que el label ocupe una línea completa */
+                                    margin-bottom: 10px; /* Espacio entre el label y el DropDownList */
+                                }
+                            </style>
+
+                            @if (ViewData["MENSAJETIPO"] != null)
+                            {
+                                <div class="alert alert-danger" role="alert">
+                                    @ViewData["MENSAJETIPO"]
+                                </div>
+                            }
+
+                            <button type="submit" class="btn btn-primary">Actualizar</button>
+                            <a class="btn btn-warning" href="@Url.Action("Tipo","Tipo")">Volver</a>
 
 
 
